--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -8,12 +8,10 @@
     android:background="@android:color/holo_blue_bright"
     tools:context=".launchactivity.LaunchActivity">
 
-
     <LinearLayout
         android:id="@+id/fragment_linearLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <fragment
             android:id="@+id/place_autocomplete_fragment"
@@ -66,6 +64,4 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewWeatherCondition"
         app:srcCompat="@drawable/ic_degree_white_24" />
 
-
 </android.support.constraint.ConstraintLayout>
-
