--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -6,18 +6,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_bright"
-    tools:context=".launchactivity.LaunchActivity">
+    tools:context=".launch_activity.LaunchActivity">
 
     <LinearLayout
         android:id="@+id/fragment_linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <fragment
             android:id="@+id/place_autocomplete_fragment"
             android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-            android:layout_width="372dp"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="@+id/fragment_linearLayout"
+            app:layout_constraintRight_toRightOf="@+id/fragment_linearLayout"
+            app:layout_constraintTop_toTopOf="@+id/fragment_linearLayout"
+            android:layout_centerInParent="true"
+            />
     </LinearLayout>
 
     <TextView
@@ -25,43 +33,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/large"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/small"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_linearLayout"
-        android:textColor="@android:color/white"/>
+        android:text="abc"
+        android:layout_centerInParent="true"
+
+        app:layout_constraintTop_toBottomOf="@+id/fragment_linearLayout" />
 
     <TextView
         android:id="@+id/textViewWeatherCondition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/xx_small"
-        android:textSize="@dimen/x_small"
         android:textColor="@android:color/white"
+        android:textSize="@dimen/x_small"
         app:layout_constraintLeft_toLeftOf="@+id/textViewPlaceName"
         app:layout_constraintRight_toRightOf="@+id/textViewPlaceName"
-        app:layout_constraintTop_toBottomOf="@+id/textViewPlaceName" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textViewPlaceName"
+        android:text="12"/>
     <TextView
         android:id="@+id/textViewTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/xx_small"
-        android:textSize="@dimen/small"
         android:textColor="@android:color/white"
+        android:textSize="@dimen/small"
+        android:layout_centerInParent="true"
+        android:text="qw"
         app:layout_constraintLeft_toLeftOf="@+id/textViewWeatherCondition"
         app:layout_constraintRight_toRightOf="@+id/textViewWeatherCondition"
         app:layout_constraintTop_toBottomOf="@+id/textViewWeatherCondition" />
 
-    <ImageView
-        android:id="@+id/imageViewDegree"
-        android:layout_width="@dimen/x_small"
-        android:layout_height="@dimen/x_small"
-        android:layout_marginEnd="@dimen/x_small"
-        app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintLeft_toRightOf="@+id/textViewTemperature"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewWeatherCondition"
-        app:srcCompat="@drawable/ic_degree_white_24" />
 
 </android.support.constraint.ConstraintLayout>
